WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14504
REGRESSION (
r23573
): Amazon Book Excerpt can not be viewed in recent nightly
https://bugs.webkit.org/show_bug.cgi?id=14504
Summary
REGRESSION (r23573): Amazon Book Excerpt can not be viewed in recent nightly
Jiang Jiang
Reported
2007-07-02 20:22:04 PDT
Amazon Book Excerpt can not be viewed in recent nightly, and a JavaScript except is thrown.
Attachments
a screenshot of that problem
(70.47 KB, image/png)
2007-07-02 20:23 PDT
,
Jiang Jiang
no flags
Details
a screenshot of correct rendering (in Safari 3.0.2)
(187.77 KB, image/png)
2007-07-02 20:25 PDT
,
Jiang Jiang
no flags
Details
Reduction
(119 bytes, text/html)
2007-07-03 06:29 PDT
,
mitz
no flags
Details
patch
(42.73 KB, patch)
2007-07-04 00:34 PDT
,
Sam Weinig
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jiang Jiang
Comment 1
2007-07-02 20:23:24 PDT
Created
attachment 15358
[details]
a screenshot of that problem
Jiang Jiang
Comment 2
2007-07-02 20:25:55 PDT
Created
attachment 15359
[details]
a screenshot of correct rendering (in Safari 3.0.2)
mitz
Comment 3
2007-07-03 06:29:33 PDT
Created
attachment 15366
[details]
Reduction <
http://trac.webkit.org/projects/webkit/changeset/23573
> (patch for
bug 14211
) made it impossible to shadow the 'toolbar' property with a variable.
Sam Weinig
Comment 4
2007-07-04 00:34:57 PDT
Created
attachment 15380
[details]
patch This patch moves the logic that allows the locals shadow window properties from KJS::Window to JSDOMWindow.
mitz
Comment 5
2007-07-04 01:03:18 PDT
Comment on
attachment 15380
[details]
patch r=me. How about using JavaScript to generate the big <script> element in the test?
Sam Weinig
Comment 6
2007-07-04 13:06:39 PDT
Landed in
r23987
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug