LayoutTests:

Reviewed by Mitz.

        Test for http://bugs.webkit.org/show_bug.cgi?id=14504
        REGRESSION (r23573): Amazon Book Excerpt can not be viewed in recent nightly

        * fast/dom/Window/window-property-shadowing-expected.txt: Added.
        * fast/dom/Window/window-property-shadowing.html: Added.

WebCore:

        Reviewed by Mitz.

        Patch for http://bugs.webkit.org/show_bug.cgi?id=14504
        REGRESSION (r23573): Amazon Book Excerpt can not be viewed in recent nightly

        - Made it possible (again) to shadow window properties with local variable names.

        Test: fast/dom/Window/window-property-shadowing.html

        * bindings/js/JSDOMWindowCustom.cpp:
        (WebCore::JSDOMWindow::customPut):
        * bindings/js/kjs_window.cpp:
        (KJS::Window::put):
        * bindings/scripts/CodeGeneratorJS.pm:
        * page/DOMWindow.idl:



Canonical link: https://commits.webkit.org/18730@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@23987 268f45cc-cd09-0410-ab3c-d52691b4dbfc